# dKNOW

./: README.md  RELEASES.md
docling_rs/: AUDIT_PDF_QUALITY_2026-01-04.md  BACKLOG_VIZ_TOOLS.md  BENCHMARKING.md  CHANGELOG.md  CLI_UX_DESIGN.md  Cargo.toml  DESIGN_MACOS_PDF_VISUALIZER.md  DESIGN_RUST_ONLY_ARCHITECTURE.md  DOCLING_ARCHITECTURE.md  FIX_CARGO_PATH.sh  FORMAT_PROCESSING_GRID.md  ICS_ATTENDEE_METADATA_LIMITATION.md  INVESTIGATION_LAYOUT_GAP_4429.md  LLM_JUDGE_VERIFICATION_PROTOCOL.md  PARSER_PORTING_STRATEGY.md  PDF_OCR_TRIAGE_GUIDE.md  README.md  REFACTOR_WALK_BODY.md  REPO_AUDIT.md  SECURITY_AUDIT.md  SUPPORTED_FORMATS_REPORT.md  TESTING_STRATEGY.md  TOOLS_AVAILABLE.md  analyze_score_improvements.sh  check_worker.sh  continue_loop.sh  demo_pdf_extraction.sh  extract_scores.py  get_python_baseline.py  get_python_docitems.py  install_anti_loop_hook.sh  json  libpdfium_render_bridge.dylib  run_all_docitem_tests.sh  run_all_llm_tests.sh  run_comprehensive_llm_tests.sh  run_llm_test.sh  run_tests.sh  setup_env.sh  test_fb2_quality.sh  (+3 more)
docling_rs/.cargo/: config.toml
docling_rs/archive/: API_KEY_EXISTS_NO_EXCUSES.txt  FIX_36_FAILURES_ONE_BY_ONE.txt.ARCHIVED_2025-11-20  FIX_VERIFIED_BUGS_NOW.txt  USER_DIRECTIVE_QUALITY_95_PERCENT.txt  outdated-directives-n1418-note.md
docling_rs/completions/: _docling  docling.bash  docling.fish  docling.ps1
docling_rs/docs/: ANNOTATION_FORMAT.md  API.md  API_COOKBOOK.md  ARCHITECTURE.md  BASELINE_PERFORMANCE_BENCHMARKS.md  CONTRIBUTING.md  FORMATS.md  TROUBLESHOOTING.md  USER_GUIDE.md
docling_rs/examples/: .docling.toml  README.md  basic_conversion.rs  batch_processing.rs  cli_tool.rs  custom_serialization.rs  error_handling.rs  format_detection.rs  metadata_extraction.rs  ocr_processing.rs  performance_bench.rs  streaming_api.rs
docling_rs/scripts/: ai_visual_judge.py  convert_rtdetr_to_coreml.py  convert_to_coreml.py  export_doclayout_to_coreml.py  export_doclayout_yolo.py  fix_coreml_output_shape.py  install-hooks.sh  llm_judge_eval.py  pre-commit.sh  quantize_layout_model.py  scan_format_quality.sh  test_ai_review_e2e.sh  verify_conversion_quality.sh  verify_pdf_quality.sh
docling_rs/test-corpus/: CREATE_OPENDOCUMENT_TEST_FILES.py  CREATE_XPS_TEST_FILES.py  FILE_INVENTORY.md  IWORK_DOWNLOAD_REPORT.txt  IWORK_TEST_FILES.md  MICROSOFT_FORMATS_README.md  README.md
docling_rs/test-results/: README.md
pdfium_fast/examples/: BUILD.gn  benchmark_bgra_rgb.cpp  pdfium_cli.cpp  pdfium_render_bridge.cpp  reference_jsonl_extract.cpp  reference_text_extract.cpp  test_per_thread_instances.cpp
pdfium_fast/image_diff/: BUILD.gn  image_diff_png_libpng.cpp  image_diff_webp.cpp  image_diff_webp.h
pdfium_fast/rust/: ARCHITECTURE.md  Cargo.toml
sg/: Cargo.toml  INDEXING_ROADMAP.md  README.md  clippy.toml
sg/config/: profile.yaml  train_codesearchnet.yaml  train_codesearchnet_2m.yaml  train_codesearchnet_improved.yaml  train_codesearchnet_mps.yaml  train_combined_full.yaml  train_combined_mps.yaml  train_extended_138k.yaml  train_fast_v4.yaml  train_improved.yaml  train_improved_v2.yaml  train_improved_v3.yaml  train_llm_judge.yaml  train_llm_judge_test.yaml  train_mlx.yaml  train_mlx_test.yaml  train_mps_optimized.yaml  train_multilang_full.yaml  train_recall_optimized.yaml  train_rust.yaml  train_rust_100k.yaml  train_rust_direct.yaml  train_rust_extended.yaml
sg/data/: codesearchnet_all.stats.json  combined_training.stats.json  thestack_extracted.stats.json
sg/docs/: AGENTIC_CODE_SEARCH_PLAN.md  ARCHITECTURE.md  BENCHMARKS.md  CODE_SEARCH_TRAINING_STATUS.md  COMPLETED_TASKS.md  DOMAIN_SPECIFIC_EMBEDDING_STRATEGY.md  EMBEDDING_ROADMAP.md  EMBEDDING_TRAINING.md  EVALUATION.md  FINE_TUNING_PLAN.md  MANAGER_HANDOFF.md  MANAGER_REPORT_2026_01_03.md  METAL_TRAINING_PLAN.md  MLX_TRAINING_REPORT.md  PROFILING_RESULTS.md  RETRIEVAL_ARCHITECTURE.md  ROADMAP.md  TRAINING_DATA.md  TRAINING_DATA_PLAN.md  TRAINING_EXECUTION_PLAN.md  TRAINING_METHODOLOGY.md  WORKER_DIRECTIONS_LLM_JUDGE.md  WORKER_DIRECTIONS_METAL.md
sg/eval/: MULTI_EMBEDDING_RESULTS.md  RESULTS.md  code_queries.json  gutenberg_queries.json  multilingual_queries.json  pdf_queries.json  semantic_queries.json
sg/scripts/: benchmark_grad_checkpoint.py  benchmark_mlx_vs_pytorch.py  benchmark_t5_encoder.py  benchmark_training.py  combine_extractions.py  compare_loss_curves.py  convert_mlx_to_pytorch.py  create_codesearchnet_eval.py  download_codesearchnet.py  download_thestack.py  download_thestack_v2.py  eval_recall_auc.py  export_onnx.py  extract_code_structure.py  extract_cpp.py  extract_lean_java.py  extract_priority_training.py  extract_python_training_data.py  extract_readme_pairs.py  extract_rust_fast.py  extract_rust_training_data.py  extract_swift_objc.py  extract_thestack_training.py  extract_typescript.py  improve_training_data.py  merge_lora.py  mlx_losses.py  prepare_training_data.py  profile_training.py  requirements.txt  score_relevance.py  test_mlx_save.py  train_llm_judge.py  train_recall_optimized.py  train_xtr_code.py  train_xtr_improved.py  (+3 more)
video_audio_extracts/: .hint  AI_VERIFICATION_PLAN.md  AI_VERIFICATION_REPORT.md  AI_VERIFICATION_TEST_SUITE.md  BEST_OPEN_SOURCE_SOFTWARE.md  CHANGELOG.md  CLAUDE.md  COMPLETE_GRID_STATUS_REPORT.md  CRITICAL_FILES_PROTECTION.md  Cargo.toml  Dockerfile.ubuntu  ENVIRONMENT_SETUP.md  FORMAT_CONVERSION_GRID.md  FORMAT_CONVERSION_TEST_SUITE.md  FORMAT_SUPPORT_GAPS_N251.md  KNOWN_ISSUES.md  MANAGER_FINAL_COMPREHENSIVE_PLAN.md  MANAGER_FINAL_STATUS_COMPLETE.md  MANAGER_NOTE_QUALITY_VERIFICATION_REQUIRED.md  MANAGER_NOTE_RAPID_V5.md  MANAGER_PARALLEL_WORKER_PLAN.md  MODELS.md  N255_CLEANUP_SUMMARY.md  N255_TODO_ANALYSIS.md  N256_GRID_REPORT_AUDIT.md  N257_GRID_REPORT_COMPLETION.md  ORDER_ALL_REMAINING_FORMATS_NOW.txt  PRODUCTION_READINESS_PLAN.md  README.md  RELEASE_NOTES_v1.0.0.md  RUN_STANDARD_TESTS.md  START_N341_QUICK_WINS.txt  TEST_ENFORCEMENT.md  TEST_THREAD_LIMITING.md  TRANSCRIPTION_SPELL_CORRECTION.md  analyze_true_state.sh  bulk_benchmark_results.txt  collect_true_data.py  complete_review_n10.py  docker-compose.yml  (+12 more)
(+5798 files in other folders)
