[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/dropbox/dKNOW/sg"

[workspace.dependencies]
# ML inference (from rust-warp)
candle-core = { version = "0.8", features = ["metal"] }
candle-nn = { version = "0.8", features = ["metal"] }
candle-transformers = { version = "0.8", features = ["metal"] }
tokenizers = "0.20"
safetensors = "0.4"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# File watching
notify = "7.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "2"
indicatif = "0.17"

# Concurrency
crossbeam-channel = "0.5"
rayon = "1.10"

# Utilities
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
dirs = "5"
rand = "0.9"
sha2 = "0.10"
once_cell = "1"
hf-hub = "0.3"
regex = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Internal crates
sg-core = { path = "crates/sg-core" }
sg-daemon = { path = "crates/sg-daemon" }
markdown_chunker = { path = "crates/markdown_chunker" }

# External document processing (pure Rust, no Python)
docling-backend = { path = "../docling_rs/crates/docling-backend" }
# Pure Rust PDF text extraction (fallback when docling fails)
pdf-extract = "0.7"
# DOCX text extraction
docx-lite = "0.2"
# Excel/spreadsheet reading
calamine = "0.32"
# PowerPoint presentation extraction
pptx-to-md = "0.4"
# EPUB ebook reading
epub = "2.1"
# Low-level PDF parsing for metadata extraction
lopdf = "0.38"
# File type detection by magic bytes
infer = "0.19"
# Character encoding detection
chardetng = "0.1"
# Encoding conversion (Gecko's implementation)
encoding_rs = "0.8"
# Bloom filter for fast duplicate detection
bloomfilter = "1.0"
# Base64 encoding for persisting binary data in text fields
base64 = "0.22"
# OCR for scanned documents
docling-ocr = { path = "../docling_rs/crates/docling-ocr" }
# Image processing for OCR
image = "0.25"
# PDF rendering for OCR fallback
pdfium-render = "0.8"
