[package]
name = "video-audio-extracts"
version = "0.1.0"
edition = "2021"
authors = ["Video Audio Extracts Team"]
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "crates/video-extract-core",
    "crates/video-extract-cli",
    "crates/ingestion",
    "crates/video-decoder",
    "crates/audio-extractor",
    "crates/keyframe-extractor",
    "crates/scene-detector",
    "crates/orchestrator",
    "crates/common",
    "crates/transcription",
    "crates/object-detection",
    "crates/face-detection",
    "crates/ocr",
    "crates/diarization",
    "crates/embeddings",
    "crates/fusion",
    "crates/storage",
    "crates/api-server",
    "crates/subtitle-extraction",
    "crates/audio-classification",
    "crates/smart-thumbnail",
    "crates/action-recognition",
    "crates/motion-tracking",
    "crates/pose-estimation",
    "crates/image-quality-assessment",
    "crates/emotion-detection",
    "crates/audio-enhancement-metadata",
    "crates/shot-classification",
    "crates/metadata-extraction",
    "crates/content-moderation",
    "crates/logo-detection",
    "crates/music-source-separation",
    "crates/depth-estimation", "crates/caption-generation", "crates/format-conversion",
    "crates/voice-activity-detection", "crates/acoustic-scene-classification", "crates/profanity-detection",
    "crates/duplicate-detection",
    "tools/build_logo_database",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Video Audio Extracts Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# FFmpeg bindings
ffmpeg-next = "8.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# ML inference
ort = { version = "2.0.0-rc.10", features = ["cuda", "coreml"] }

# Image processing
image = { version = "0.25", features = ["avif-native"] }
imageproc = "0.25"

# Array operations
ndarray = "0.16"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Storage
aws-sdk-s3 = "1.63"
qdrant-client = "1.13"
tokio-postgres = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
criterion = { version = "0.5", features = ["html_reports"] }

[dev-dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = "0.30"
chrono = "0.4"
csv = "1.3"
sha2 = "0.10"
md5 = "0.7"
hostname = "0.4"
criterion = { workspace = true }
image = { workspace = true }  # For extracting JPEG/PNG metadata in tests
ndarray = { workspace = true }
video-audio-common = { path = "crates/common" }
video-audio-decoder = { path = "crates/video-decoder" }
video-extract-core = { path = "crates/video-extract-core" }
video-audio-pose-estimation = { path = "crates/pose-estimation" }

[[bench]]
name = "thumbnail_pipeline_bench"
harness = false

[[bench]]
name = "preprocessing_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[profile.flamegraph]
inherits = "release"
debug = true
strip = false
