# Copyright 2018 The PDFium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../pdfium.gni")

source_set("image_diff") {
  testonly = true
  sources = [
    "image_diff_png.h",
    "image_diff_webp.h",
    "image_diff_webp.cpp",
  ]
  deps = []

  if (pdf_use_skia) {
    sources += [ "image_diff_png_skia.cpp" ]
    deps += [ "//skia" ]
  } else {
    sources += [ "image_diff_png_libpng.cpp" ]
    deps += [
      "../../third_party:png",
      "../../third_party:zlib",
    ]
  }

  # Add WebP support (use system libwebp for now)
  defines = [ "USE_SYSTEM_LIBWEBP" ]
  libs = [ "webp" ]

  # Add system libwebp include path (Homebrew on Apple Silicon)
  if (is_mac) {
    include_dirs = [ "/opt/homebrew/opt/webp/include" ]
    lib_dirs = [ "/opt/homebrew/opt/webp/lib" ]
  }

  configs += [
    "../../:pdfium_strict_config",
    "../../:pdfium_noshorten_config",
  ]
  public_deps = [ "../../core/fxcrt" ]
}
