[workspace]
members = [
    "pdfium-render-bridge",
    "pdfium-render-fast",
    "pdfium-sys",
]
resolver = "2"

[workspace.package]
version = "2.1.0"
edition = "2021"
authors = ["PDFium Optimization Project"]
license = "Apache-2.0"

[workspace.dependencies]
# Shared dependencies across workspace
libc = "0.2"
png = "0.17"
md5 = "0.7"
jpeg-encoder = "0.6"
webp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
thiserror = "2.0"
rayon = "1.10"
