[package]
name = "docling-latex"
version.workspace = true
edition.workspace = true
description = "Pure Rust LaTeX format support for docling"
keywords = ["latex", "tex", "academic", "parser"]
categories = ["parsing", "text-processing"]
license.workspace = true
repository.workspace = true

[dependencies]
docling-core = { version = "2.58.0", path = "../docling-core" }
anyhow.workspace = true
regex = "1.10"
chrono = "0.4"

[dev-dependencies]
